# Hackathon-II

phase-I/: .gitignore  README.md  pyproject.toml
phase-I/.specify/memory/: constitution.md
phase-I/history/prompts/001-console-todo-mvp/: 002-spec-console-todo-mvp.spec.prompt.md  003-plan-console-todo-mvp.plan.prompt.md  004-tasks-console-todo-mvp.tasks.prompt.md  005-implement-console-todo-mvp.implement.prompt.md
phase-I/history/prompts/constitution/: 001-initial-constitution-setup.constitution.prompt.md
phase-I/specs/001-console-todo-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-I/specs/001-console-todo-mvp/checklists/: requirements.md
phase-I/specs/001-console-todo-mvp/contracts/: api-schema.yaml
phase-I/src/cli/: main.py
phase-I/src/models/: todo.py
phase-I/src/services/: exceptions.py  todo_service.py
phase-I/tests/: conftest.py
phase-I/tests/unit/: test_todo_service.py
